apps/aniworld/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aniworld
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: aniworld
    app.kubernetes.io/part-of: aniworld
spec:
  type: ClusterIP
  clusterIP: 10.43.100.22
  selector:
    app.kubernetes.io/name: aniworld
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
