apps/aniworld/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aniworld
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: aniworld
    app.kubernetes.io/part-of: aniworld
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: aniworld.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aniworld
                port:
                  number: 8080
    - host: aniworld.pj-home-lab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aniworld
                port:
                  number: 8080
